freest/test/prog/Valid/Functional/RecData/RecData.fst
module RecData where

data T = C T

-- Not bound to terminate
f : () -> T
f _ = C (f ())

main : T
main = f ()