freest/test/prog/Invalid/Typing/ExpectsTooManyArgsLambda/ExpectsTooManyArgsLambda.fst
module ExpectsTooManyArgsLambda where

foo : Int -> Int -> Int
foo _ = \(x : Int) (y : Int) -> 0